--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.7",
+    "browserslist": "^4.24.5",
+    "caniuse-lite": "^1.0.30001718",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "openai": "^4.89.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^7.4.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.4.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
